plugins/editorconfig/testData/org/editorconfig/language/codeinsight/inspections/spaceInKey/.editorconfig
[*]
ij_http <error descr="Equals sign '=' missing after property name 'ij_http'"></error><generic_error>r</generic_error>equest_call_parameters_wrap = normal
